--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <section class="showcase">
     <video src="./Pexels Videos 2611250 (1).mp4" muted loop autoplay></video>
-        <div class="divalign">
+        <form class="divalign">
             <label for="question"><h1 class="h1text">Ask Me Anything!</h1></label>
             <input type="text" id="question">
             <button id="askMe" onclick="randomImg()">Ask</button>
             <div id="answers">
             <img src="./magic8ball_extra.png" alt="magic8ball" id="eightBall">
             </div>
-        </div>
+        </form>
     </section>
     <script src="./javascript.js"></script>
 </body>
