--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             </div>
         </form>
     </section>
-    <script src="./javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
